# stm32test

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
