[package]
name = "stmtest"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
fugit = "0.3.7"
panic-halt = "1.0.0"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f401"] }
